syntax = "proto2";
package substate;

import "google/protobuf/empty.proto";

message Fridge {
  optional FridgeParams params = 1;
  optional google.protobuf.Empty cycle =2;
}

message FridgeParams {
  optional uint32 delay1 = 1;
  optional uint32 delay2 = 2;
  optional uint32 delay3 = 3;
}
